--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="block1">
@@ -25,6 +25,7 @@
         <button>Sign up</button>
         <div class="top-image">
         <img src="" alt=""></div>
+        </div>
         </div>
     
     
@@ -53,8 +54,6 @@
     <div class="footer">
         <div class="copyright">Copyright © The Odin Project 2021</div>
     </div>
-
-</div>
 
 </body>
 </html>
