edited style.css, index.html and added image to container 1

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div class="block1">
         <div class="header">Header Logo</div>
         <ul class="headerlinks">
-        <li><a ref="">Link 1</a></li>
-        <li><a ref="">Link 2</a></li>
-        <li><a ref="">Link 3</a></li>
+        <li><a href="#">Link 1</a></li>
+        <li><a href="#">Link 2</a></li>
+        <li><a href="#">Link 3</a></li>
         </ul>
     </div>
 
@@ -22,9 +22,9 @@
         <div class="text">
         This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
         <div class="button1">
-        <button>Sign up</button>
+        <button>Sign up</button></div>
         <div class="top-image">
-        <img src="" alt=""></div>
+        <img src="shoes.jpg" alt="yeezys"></div>
         </div>
         </div>
     
