edited index.html and style.css

--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     </div>
 
     <div class="container1">
-        <h1>This website is awesome</h1>
+        <div class="in1"><div class="subheading">This website is awesome</div>
         <div class="text">
         This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
         <div class="button1">
         <button>Sign up</button></div>
+    </div>
         <div class="top-image">
         <img src="shoes.jpg" alt="yeezys"></div>
         </div>
