--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="container1">
         <div class="in1"><div class="subheading">This website is awesome</div>
-        <div class="text">
+        <div class="texthero">
         This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
         <div class="button1">
         <button>Sign up</button></div>
@@ -31,7 +31,7 @@
     
     
     <div class="container2">
-        <div class="subheading">Some random information</div>
+        <div class="subheading2">Some random information</div>
         <div class="box">
         <div class="text">
         this is some subtext under an illustration or image</div>    
