--- a/index.html
+++ b/index.html
@@ -32,9 +32,21 @@
     
     <div class="container2">
         <div class="subheading2">Some random information</div>
-        <div class="box">
-        <div class="text">
-        this is some subtext under an illustration or image</div>    
+    <div class=boxes>
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+    </div>
+    <div class="texts">
+        <div class="text1">
+        this is some subtext under an illustration or image</div>
+        <div class="text2">
+            this is some subtext under an illustration or image</div>
+            <div class="text3">
+                this is some subtext under an illustration or image</div>
+                <div class="text4">
+                    this is some subtext under an illustration or image</div>
         </div>
     </div>
 
