--- a/index.html
+++ b/index.html
@@ -34,10 +34,26 @@
         <div class="subheading2">Some random information</div>
     <div class=boxes>
         <div class="box1"></div>
-        <div class="box2"></div>
+        <div class="texts">
+            this is some subtext under an illustration or image</div>
+            </div>
+        <div class="boxes">
+            <div class="box2"></div>
+            <div class="texts">
+                this is some subtext under an illustration or image</div>
+                </div>
+        <div class="boxes">
         <div class="box3"></div>
+            <div class="texts">
+                this is some subtext under an illustration or image</div>
+            </div>
+        <div class="boxes">
         <div class="box4"></div>
+        <div class="texts">
+            this is some subtext under an illustration or image</div>
     </div>
+    </div>
+    <!--
     <div class="texts">
         <div class="text1">
         this is some subtext under an illustration or image</div>
@@ -48,8 +64,7 @@
                 <div class="text4">
                     this is some subtext under an illustration or image</div>
         </div>
-    </div>
-
+    -->
     <div class="container3">
         <div class="quote">This is an inspiring quote..... blah blah</div>
         <div class="name">-Thor, God of Thunder</div>
