made edits to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
         </div>
     -->
     <div class="container3">
-        <div class="quote">This is an inspiring quote..... blah blah</div>
+        <div class="quote"><em>This is an inspiring quote..... blah blah</em></div>
         <div class="name">-Thor, God of Thunder</div>
     </div>
 
     <div class="container4">
         <div class="bluebox">
         <div class="innerheader">Call to action! It's time!</div>
-        <div class="text">
+        <div class="text-in-box">
         Sign up for our product by clicking that button right over there!</div>
         <div class="button2">Sign up</div>
         </div>     
