completed landing page template, text needs changing

--- a/index.html
+++ b/index.html
@@ -25,46 +25,21 @@
         <button>Sign up</button></div>
     </div>
         <div class="top-image">
-        <img src="shoes.jpg" alt="yeezys"></div>
+        <img class="box1-img" src="shoes.jpg" alt="yeezys"></div>
         </div>
         </div>
     
     
     <div class="container2">
         <div class="subheading2">Some random information</div>
-    <div class=boxes>
-        <div class="box1"></div>
-        <div class="texts">
-            this is some subtext under an illustration or image</div>
-            </div>
-        <div class="boxes">
-            <div class="box2"></div>
-            <div class="texts">
-                this is some subtext under an illustration or image</div>
-                </div>
-        <div class="boxes">
-        <div class="box3"></div>
-            <div class="texts">
-                this is some subtext under an illustration or image</div>
-            </div>
-        <div class="boxes">
-        <div class="box4"></div>
-        <div class="texts">
-            this is some subtext under an illustration or image</div>
+        <div class="holdingcontainer">
+        <div class="internalcontainerL"><img src="shoe4.jpg" alt="shoes"><div class="imgtext">I am random information</div></div>
+        <div class="internalcontainerR"><img src="shoe3.jpg" alt="shoes"><div class="imgtext">I am random information</div></div>
+        <div class="internalcontainerM1"><img src="shoe2.jpg" alt="shoes"><div class="imgtext">I am random information</div></div>
+        <div class="internalcontainerM2"><img src="shoe1.jpg" alt="shoes"><div class="imgtext"> I am random information</div></div>
     </div>
     </div>
-    <!--
-    <div class="texts">
-        <div class="text1">
-        this is some subtext under an illustration or image</div>
-        <div class="text2">
-            this is some subtext under an illustration or image</div>
-            <div class="text3">
-                this is some subtext under an illustration or image</div>
-                <div class="text4">
-                    this is some subtext under an illustration or image</div>
-        </div>
-    -->
+
     <div class="container3">
         <div class="quote"><em>This is an inspiring quote..... blah blah</em></div>
         <div class="name">-Thor, God of Thunder</div>
