changed text that is displayed on the landing page

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <div class="block1">
-        <div class="header">Header Logo</div>
+        <div class="header">Amazing Shoes</div>
         <ul class="headerlinks">
-        <li><a href="#">Link 1</a></li>
-        <li><a href="#">Link 2</a></li>
-        <li><a href="#">Link 3</a></li>
+        <li><a href="#">About us</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="#">Sell</a></li>
         </ul>
     </div>
 
     <div class="container1">
-        <div class="in1"><div class="subheading">This website is awesome</div>
+        <div class="in1"><div class="subheading">Find your new shoes today</div>
         <div class="texthero">
-        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        Amazing shoes is the best market for buying and selling shoes, find your new pair today</div>
         <div class="button1">
         <button>Sign up</button></div>
     </div>
@@ -31,17 +31,17 @@
     
     
     <div class="container2">
-        <div class="subheading2">Some random information</div>
+        <div class="subheading2">This weeks top shoes</div>
         <div class="holdingcontainer">
-        <div class="internalcontainerL"><img src="shoe4.jpg" alt="shoes"><div class="imgtext">I am random information</div></div>
-        <div class="internalcontainerR"><img src="shoe3.jpg" alt="shoes"><div class="imgtext">I am random information</div></div>
-        <div class="internalcontainerM1"><img src="shoe2.jpg" alt="shoes"><div class="imgtext">I am random information</div></div>
-        <div class="internalcontainerM2"><img src="shoe1.jpg" alt="shoes"><div class="imgtext"> I am random information</div></div>
+        <div class="internalcontainerL"><img src="shoe4.jpg" alt="shoes"><div class="imgtext">Jordan 1 </div></div>
+        <div class="internalcontainerR"><img src="shoe3.jpg" alt="shoes"><div class="imgtext">yeezy 350</div></div>
+        <div class="internalcontainerM1"><img src="shoe2.jpg" alt="shoes"><div class="imgtext">Jordan 1</div></div>
+        <div class="internalcontainerM2"><img src="shoe1.jpg" alt="shoes"><div class="imgtext">Air force 1</div></div>
     </div>
     </div>
 
     <div class="container3">
-        <div class="quote"><em>This is an inspiring quote..... blah blah</em></div>
+        <div class="quote"><em>The best place to buy real, new and used shoes</em></div>
         <div class="name">-Thor, God of Thunder</div>
     </div>
 
@@ -49,7 +49,7 @@
         <div class="bluebox">
         <div class="innerheader">Call to action! It's time!</div>
         <div class="text-in-box">
-        Sign up for our product by clicking that button right over there!</div>
+        Sign up to our website by clicking that button right over there!</div>
         <div class="button2">Sign up</div>
         </div>     
     </div>
